added support for jenkins master-slave